--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="images/samuel.jpg" alt="samuel" style="width:200px;height:200px;"></td>
         <td> <h1>Ezeoke Samuel</h1>
-         <p><em>Structural engineer at<strong><a href="#Vasons">Vasons</a></strong></em></p>
+         <p><em>Structural engineer at<strong><a href="https://vasonsconsultants.com.ng/">Vasons</a></strong></em></p>
          <p>I am a structural engineer that has taken courses in designing and detailing of structures.</p></td>
       </tr>
     </table>
